--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}{% endblock %} 
+        <link rel="stylesheet" href="../public/css/style.css">
     </head>
     <body>
         {% block body %}{% endblock %}
