Adding the navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        {# NavBar #}
+        {% include "home/navbar.html.twig"%}
+
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
