--- a/templates/home/navbar.html.twig
+++ b/templates/home/navbar.html.twig
@@ -3,12 +3,12 @@
 			<div class="header-wrap">
 				<div class="header-top d-flex justify-content-between align-items-center navbar-expand-md">
 					<div class="col menu-left">
-						<a class="active" href="index.html">Home</a>
-						<a href="menu.html">menu</a>
-						<a href="about.html">about</a>
+						{# <a class="active" href="index.html">Accueil</a> #}
+						<a href="menu.html">Menu</a>
+						<a href="about.html">À propos</a>
 					</div>
 					<div class="col-3 logo">
-						<a href="index.html"><img class="mx-auto" src="img/logo.png" alt=""></a>
+						<a href="/"><img class="mx-auto" src="img/logo.png" alt=""></a>
 					</div>
 					<nav class="col navbar navbar-expand-md justify-content-end">
 
@@ -21,10 +21,10 @@
 						<div class="collapse navbar-collapse menu-right" id="collapsibleNavbar">
 							<ul class="navbar-nav justify-content-center w-100">
 								<li class="nav-item hide-lg">
-									<a class="nav-link" href="index.html">Home</a>
+									<a class="nav-link" href="index.html">Accueil</a>
 								</li>
 								<li class="nav-item hide-lg">
-									<a class="nav-link" href="menu.html">menu</a>
+									<a class="nav-link" href="menu.html">babouche</a>
 								</li>
 								<li class="nav-item hide-lg">
 									<a class="nav-link" href="about.html">about</a>
@@ -39,7 +39,7 @@
 										<a class="dropdown-item" href="elements.html">Elements</a>
 									</div>
 								</li>
-								<li class="nav-item dropdown">
+								{# <li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
 										Blog
 									</a>
@@ -47,9 +47,9 @@
 										<a class="dropdown-item" href="blog-home.html">Blog</a>
 										<a class="dropdown-item" href="blog-single.html">Blog Detail</a>
 									</div>
-								</li>
+								</li> #}
 								<li class="nav-item">
-									<a class="nav-link" href="gallery.html">Gallery</a>
+									<a class="nav-link" href="gallery.html">Gallerie</a>
 								</li>
 							</ul>
 						</div>
