--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
     <body>
         {# NavBar #}
         {% include "home/navbar.html.twig"%}
+        {% include "home/banner.html.twig" %}
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
