--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,7 @@
         {# NavBar #}
         {% include "home/navbar.html.twig"%}
         {% include "home/banner.html.twig" %}
+        {% include "home/sideBanner.html.twig" %}
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
