Adding the preview of menu with menu.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,7 @@
         {% include "home/navbar.html.twig"%}
         {% include "home/banner.html.twig" %}
         {% include "home/sideBanner.html.twig" %}
+        {% include "home/menu.html.twig" %}
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
