Adding Chef Word TWIG

--- a/templates/home/menu.html.twig
+++ b/templates/home/menu.html.twig
@@ -11,7 +11,7 @@
 						Boissons
 					</h1>
 					<p>N'hesitez pas à découvrir nos excellents menus.</p>
-					<a href="#" class="primary-btn text-uppercase"></a>
+					<a href="#" class="primary-btn text-uppercase">Les menus</a>
 				</div>
 			</div>
 			<div class="col-lg-7 col-md-7">
@@ -43,6 +43,7 @@
 								<p class="menu-item">Ham & Potato Sandwiches ........... <span>$25.00</span></p>
 								<p>(French bread baguette, cooked ham, potato salad)</p>
 							</li>
+
 						</ul>
 					</div>
 				</div>
