--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,7 @@
         {% include "home/banner.html.twig" %}
         {% include "home/sideBanner.html.twig" %}
         {% include "home/menu.html.twig" %}
+        {% include "home/chefWord.html.twig" %}
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
