--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,8 @@
         {% include "home/chefWord.html.twig" %}
 
         {% block body %}{% endblock %}
+
+        {% include "home/footer.html.twig" %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
