Adding Contact and Index Twig

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,4 +3,13 @@
 {% block title %}Restaurant{% endblock %}
 
 {% block body %}
+    {% include "home/banner.html.twig" %}
+
+    {% include "home/sideBanner.html.twig" %}
+
+    {% include "home/menu.html.twig" %}
+    
+    {% include "home/chefWord.html.twig" %}
+
+    {% include "home/contact.html.twig" %}
 {% endblock %}
