--- a/templates/home/navbar.html.twig
+++ b/templates/home/navbar.html.twig
@@ -4,7 +4,7 @@
 				<div class="header-top d-flex justify-content-between align-items-center navbar-expand-md">
 					<div class="col menu-left">
 						{# <a class="active" href="index.html">Accueil</a> #}
-						<a href="menu.html">Menu</a>
+						<a href="#menu_area">Menu</a>
 						<a href="about.html">À propos</a>
 					</div>
 					<div class="col-3 logo">
@@ -29,15 +29,8 @@
 								<li class="nav-item hide-lg">
 									<a class="nav-link" href="about.html">about</a>
 								</li>
-								<!-- Dropdown -->
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-										Pages
-									</a>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="contact.html">Contact</a>
-										<a class="dropdown-item" href="elements.html">Elements</a>
-									</div>
+								<li class="nav-item">
+									<a class="nav-link" href="#contact">Contact</a>
 								</li>
 								{# <li class="nav-item dropdown">
 									<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
