--- a/templates/home/sideBanner.html.twig
+++ b/templates/home/sideBanner.html.twig
@@ -7,7 +7,7 @@
 </div>
 <div class="fixed-view-menu">
 	<p>
-		<a href="menu.html">view menu</a>
+		<a href="#menu_area">Voir le menu</a>
 	</p>
 </div>
 {# Side Banner End #}
