--- a/templates/home/chefWord.html.twig
+++ b/templates/home/chefWord.html.twig
@@ -14,7 +14,7 @@
 						consequat. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
 						enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Quotes
 					</p>
-					<img src="img/signature.png" class="img-fluid" alt="">
+					<img src="img/signature.png" class="img-fluid" alt="Signature">
 				</div>
 			</div>
 			<div class="offset-lg-1 col-lg-6 col-md-6">
