--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -1,5 +1,5 @@
 {# Contact #}
-	<section class="contact-area section-gap">
+	<section class="contact-area section-gap" id="contact">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-6 col-md-6">
